--- a/SignUp/signup.html
+++ b/SignUp/signup.html
@@ -21,7 +21,8 @@
                         <input type="text" placeholder="Middle Name" id="Middle Name">
                         <input type="text" placeholder="Last Name" id="Last Name">
                     </div>
-
+                    
+                    <p id="emailMessage" style="display: none;">Please input valid email</p>
                     <input type="text" placeholder="Email" id="Email">
                     <div class="mainPassword">
                         <input type="password" placeholder="Password" id="Password" class="password">
